source/overlay/index.css
.lindy-page-settings-toprght,
.lindy-page-settings-pageadjacent {
    --background-color: white;
    --text-color: #374151;
    --color-muted: #9ca3af;

    visibility: visible !important; /* show only once CSS applies */
}

.lindy-allowed-iframe {
    min-width: 0 !important;
    border: none !important;
}
.lindy-page-settings-toprght {
    all: revert;
    position: fixed !important;
    top: 0;
    right: 0;
    z-index: 3000;
    padding: 9px;
    contain: layout style;

    display: flex;
    flex-direction: column;
    align-items: flex-end;
    line-height: 1;
    gap: 5px;
}
.lindy-page-settings-pageadjacent {
    all: revert;
    position: absolute !important;
    top: 7px;
    left: calc(
        (100vw - var(--lindy-pagewidth)) / 2 + var(--lindy-pagewidth) - 5px
    );
    z-index: 2000;
    padding: 10px;
    contain: layout style;

    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 5px;

    transition: left 0.2s ease-in-out;
}
.lindy-page-settings-toprght,
.lindy-page-settings-pageadjacent {
    animation: fadeInUi 0.2s cubic-bezier(0.33, 1, 0.68, 1);
    animation-fill-mode: both;
}
@keyframes fadeInUi {
    from {
        visibility: hidden;
        opacity: 0;
    }
    to {
        visibility: visible;
        opacity: 1;
    }
}
.lindy-page-settings-toprght.lindy-ui-fadeout,
.lindy-page-settings-pageadjacent.lindy-ui-fadeout {
    animation: fadeOutUi 0.2s cubic-bezier(0.33, 1, 0.68, 1);
    animation-fill-mode: both;
}
@keyframes fadeOutUi {
    from {
        visibility: visible;
        opacity: 1;
    }
    to {
        visibility: hidden;
        opacity: 0;
    }
}

#lindy-info-topleft {
    all: initial;
    position: fixed;
    top: 0;
    left: 0;
    /* margin inside iframe to render shadow */
    height: calc(100vh - 10px);
    user-select: none;
    contain: strict;
    z-index: 3000;
    will-change: transform;

    width: 400px;
    max-width: calc(
        (100vw - var(--lindy-pagewidth)) / 2 - 7px
    ); /* also set via inline styles to prevent initial transition */

    transition: max-width 0.2s cubic-bezier(0.33, 1, 0.68, 1);
    animation: fadeInOutline 0.2s cubic-bezier(0.33, 1, 0.68, 1);
    animation-fill-mode: both;
}
@keyframes fadeInOutline {
    from {
        visibility: hidden;
        opacity: 0;
        transform: translate3d(-200px, 0, 0);
    }
    to {
        visibility: visible;
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
}
#lindy-info-topleft.lindy-ui-fadeout {
    animation: fadeOutOutline 0.2s cubic-bezier(0.33, 1, 0.68, 1);
    animation-fill-mode: both;
}
@keyframes fadeOutOutline {
    from {
        visibility: visible;
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
    to {
        visibility: hidden;
        opacity: 0;
        transform: translate3d(-200px, 0, 0);
    }
}

.lindy-element-spotlght {
    position: absolute;
    z-index: 10000;
    visibility: hidden;
    opacity: 0;

    background-color: red;
    border-radius: 5px;
    cursor: pointer;

    transition: opacity 0.1s ease-in-out, top 0.1s ease-in-out,
        left 0.1s ease-in-out, height 0.1s ease-in-out;
}
.lindy-element-spotlght.lindy-is-shrinking {
    height: 0 !important;
    transition: height 0.3s ease-in-out;
}
.lindy-just-blocked-element:not(#fakeID#fakeID#fakeID#fakeID) {
    display: block !important;
    overflow: hidden !important;

    height: 0px !important;
    max-height: none !important;
    min-height: auto !important;

    margin: 0 !important;
    padding: 0 !important;
    border: none !important;

    opacity: 0 !important;

    transition: all 0.3s ease-in-out;
}

#lindy-info-bottom {
    all: initial;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 260px;
    margin: 0;
    --side-width: calc((100vw - var(--lindy-pagewidth)) / 2 - 12px);
    margin-left: var(--side-width);
    width: calc(var(--lindy-pagewidth) + 12px);

    user-select: none;
    contain: strict;
    z-index: 3000;
    will-change: transform;
}

@media (max-width: 1300px) {
    #lindy-info-topleft {
        display: none !important;
    }
    #lindy-annotations-bar {
        left: calc(var(--lindy-pagewidth) + 20px + 5px);
        width: calc(100vw - (var(--lindy-pagewidth) + 20px + 5px) - 50px);
    }
    .lindy-page-settings-pageadjacent {
        left: calc(var(--lindy-pagewidth) + 20px + 0px) !important;
    }
    #lindy-info-bottom {
        margin-left: 15px;
        max-width: calc(100% - 15px);
    }
}

